--- a/index.css
+++ b/index.css
@@ -53,8 +53,8 @@ body {
 }
 
 .feature {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: auto;
 }
 
 .discount-title {
@@ -62,7 +62,7 @@ body {
 }
 
 .footer {
-    height: 350px;
+    height: auto;
     background-color: #FFFFFF;
 }
 
