--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
     display:table;
     width: 40%;
     height:100%;
-    margin-left: -200px;    
+    margin-right: 10%;    
 }
 
 body {
@@ -16,17 +16,14 @@ body {
     color: #fff;
     background-color: blue;    
     cursor: pointer;
-    padding: 25px 80px;
+    padding: auto, auto, auto, auto;
     display: inline-block;
-    margin: 10px;
+    /* margin: 10px; */
     text-transform: uppercase;
     letter-spacing: 1px;
     font-weight: 700;
     outline: none;
-    position: relative;
-    -webkit-transition: all 0.3s;
-    -moz-transition: all 0.3s;
-    transition: all 0.3s;
+    position: relative;    
 }
 
 
@@ -41,11 +38,11 @@ body {
 }
 
 .carousel-caption p {
-    margin-top: 350px;      
+    margin-top: 50%;      
 }
 
 .carousel-caption button {
-    margin-top: 20px;      
+    margin-top: 0%;      
 }
 
 .carousel-item img {
@@ -81,13 +78,13 @@ html {
 
 /* Media query */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 750px) {
     .carousel-caption p {
         visibility: hidden;      
     }
     
     .carousel-caption button {
-        visibility: hidden;     
+        /* visibility: hidden;      */
     }    
     
     .footer div {
