--- a/index.css
+++ b/index.css
@@ -18672,3 +18672,18 @@ a {
    will-change: transform;
    transition: transform .25s ease-in-out;
 }
+
+.explore-pkg-btn {
+   background-color: #333;
+   color: #fff;
+   padding: 10px 20px;
+   border: none;
+   width: 40%;
+   border-radius: 4px;
+   cursor: pointer;
+   margin-top: 10px;
+   display: inline-block;
+   font-size: 16px;
+   box-shadow: -1px 4px 8px 0 rgba(0,0,0,.34);
+   text-transform: uppercase;
+}
