--- a/index.css
+++ b/index.css
@@ -323,6 +323,11 @@ section.service-second-section {
    overflow-y: scroll;
 }
 
+#serviceCartItem {
+   max-height: 320px;
+   overflow-y: scroll;
+}
+
 .booking_datetime_heading {
    font-size: 15px;
    text-align: center;
@@ -432,4 +437,262 @@ section.service-second-section {
    padding: 10px 0;
    margin-bottom: 0;
    font-size: 12px;
+}
+
+@media only screen and (max-device-width:414px) {
+   footer {
+      margin-top: 150%;
+   }
+}
+
+/* Model css */
+
+ .form-style-5{
+	max-width: 500px;
+	padding: 10px 20px;
+	background: #f4f7f8;
+	margin: 10px auto;
+	padding: 20px;
+	background: #f4f7f8;
+	border-radius: 8px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+}
+.form-style-5 fieldset{
+	border: none;
+} 
+ .form-style-5 legend {
+	font-size: 1.4em;
+	margin-bottom: 10px;
+}
+.form-style-5 label {
+	display: block;
+	margin-bottom: 8px;
+}
+.form-style-5 input[type="text"],
+.form-style-5 input[type="date"],
+.form-style-5 input[type="datetime"],
+.form-style-5 input[type="email"],
+.form-style-5 input[type="number"],
+.form-style-5 input[type="search"],
+.form-style-5 input[type="time"],
+.form-style-5 input[type="url"],
+.form-style-5 textarea,
+.form-style-5 select {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	background: rgba(255,255,255,.1);
+	border: none;
+	border-radius: 4px;
+	font-size: 15px;
+	margin: 0;
+	outline: 0;
+	padding: 10px;
+	width: 100%;
+	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
+	background-color: #e8eeef;
+	color:#8a97a0;
+	-webkit-box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+	box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+	margin-bottom: 30px;
+}
+.form-style-5 input[type="text"]:focus,
+.form-style-5 input[type="date"]:focus,
+.form-style-5 input[type="datetime"]:focus,
+.form-style-5 input[type="email"]:focus,
+.form-style-5 input[type="number"]:focus,
+.form-style-5 input[type="search"]:focus,
+.form-style-5 input[type="time"]:focus,
+.form-style-5 input[type="url"]:focus,
+.form-style-5 textarea:focus,
+.form-style-5 select:focus{
+	background: #d2d9dd;
+}
+.form-style-5 select{
+	-webkit-appearance: menulist-button;
+	height:35px;
+}
+.form-style-5 .number {
+	background: #1abc9c;
+	color: #fff;
+	height: 30px;
+	width: 30px;
+	display: inline-block;
+	font-size: 0.8em;
+	margin-right: 4px;
+	line-height: 30px;
+	text-align: center;
+	text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+	border-radius: 15px 15px 15px 0px;
+}
+
+.form-style-5 input[type="submit"],
+.form-style-5 input[type="button"],
+.form-style-5 button
+{
+	position: relative;
+	display: block;
+	padding: 19px 39px 18px 39px;
+	color: #FFF;
+	margin: 0 auto;
+	background: #1abc9c;
+	font-size: 18px;
+	text-align: center;
+	font-style: normal;
+	width: 100%;
+	border: 1px solid #16a085;
+	border-width: 1px 1px 3px;
+	margin-bottom: 10px;
+}
+.form-style-5 input[type="submit"]:hover,
+.form-style-5 input[type="button"]:hover
+{
+	background: #109177;
+}
+
+.closeModel {
+	position: relative;
+	display: block;
+	padding: 15px 30px 15px 30px;
+	color: #FFF;
+	margin: 0 auto;
+	background: #1abc9c;
+	/* font-size: 18px; */
+	text-align: center;
+	font-style: normal;
+	/* width: 100%; */
+	border: 1px solid #16a085;
+	border-width: 1px 1px 3px;
+	/* margin-bottom: 10px; */
+}
+
+.no-arrow {
+   -moz-appearance: textfield;
+ }
+ .no-arrow::-webkit-inner-spin-button {
+   display: none;
+ }
+ .no-arrow::-webkit-outer-spin-button,
+ .no-arrow::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+ }
+
+ /* Explore services */
+
+ .home-h2 {
+   padding-top: 7px;
+   text-align: center;
+   font-family: montserrat,sans-serif;
+   font-size: 26px;
+   font-weight: 600;
+   text-align: center;
+   margin: 10px;
+}
+
+.section-header-underline {
+   width: 55px;
+   background: #4f4f4f;
+   border-radius: 5px;
+   border: 1px solid #4f4f4f;
+   padding: 1px;
+   transform: translate(-50%,-50%);
+   left: 50%;
+   position: relative;
+   top: 13px;
+}
+
+.servc-container-box {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   text-align: center;
+}
+
+.servc-container-box > div {
+   margin: 15px 0;
+}
+
+.width-20-top {
+   width: 16.8% !important;
+}
+
+#card-1 #img {
+   background-image: url(./assest/air-conditioner.svg);
+}
+
+#card-2 #img {
+   background-image: url(./assest/electricity.svg);
+}
+
+#card-3 #img {
+   background-image: url(./assest/chisel.svg);
+}
+
+#card-4 #img {
+   background-image: url(./assest/company.svg);
+}
+
+#card-5 #img {
+   background-image: url(./assest/clean.svg);
+}
+
+#card-6 #img {
+   background-image: url(./assest/pest-control.svg);
+}
+
+#card-7 #img {
+   background-image: url(./assest/paint-brush.svg);
+}
+
+#card-8 #img {
+   background-image: url(./assest/water.svg);
+}
+
+#card-9 #img {
+   background-image: url(./assest/maintenance.svg);
+}
+
+#card-10 #img {
+   background-image: url(./assest/broom.svg);
+}
+
+#card-11 #img {
+   background-image: url(./assest/disinfection.svg);
+}
+
+#img {
+   height: 56px;
+   width: 56px;
+   margin: 0 auto;
+   background-size: cover;
+   pointer-events: none;
+   position: relative;
+   display: block;
+}
+
+a {
+   text-decoration: none !important;
+   cursor: pointer;
+   color: #337ab7;
+}
+
+a:active, a:hover {
+   outline: 0;
+}
+
+.cards2 {
+   box-shadow: 0 8px 12px -1px rgba(0,0,0,.1);
+   -webkit-box-shadow: 0 8px 12px -1px rgba(0,0,0,.1);
+   -moz-box-shadow: 0 8px 12px -1px rgba(0,0,0,.1);
+   padding: 15px 10px;
+   background: #fff;
+   margin: 0 auto;
+   color: grey;
+   border-bottom: 2px solid #3fb661;
+   text-align: center;
+   border-radius: 4px;
+   display: block;
+   height: 100%;
+   min-height: 160px;
 }
