--- a/index.css
+++ b/index.css
@@ -619,7 +619,7 @@ section.service-second-section {
 }
 
 #card-1 #img {
-   background-image: url(./assest/air-conditioner.svg);
+   background-image: url(https://drive.google.com/uc?id=1qEqwlbNjhDRvWpOYDOJb4yDTv8VABdxE);
 }
 
 #card-2 #img {
